--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,7 +40,7 @@ set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | 
 set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
-set-option -g prefix C-b
+set-option -g prefix C-t
 
 # Start numbering at 1
 set -g base-index 1
