--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,10 +34,10 @@ set-window-option -g clock-mode-colour green #green
 
 set -g status-interval 1
 set -g status-justify centre # center align window list
-set -g status-left-length 20
-set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+#set -g status-left-length 20
+#set -g status-right-length 140
+#set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-t
@@ -65,11 +65,11 @@ set -g visual-activity on
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
+unbind -T copy-mode-vi Enter
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -90,7 +90,7 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set-window-option -g automatic-rename
 
 # color
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 
 # reattach
@@ -99,12 +99,12 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-justify "centre"
-set-option -g status-left-length 90
-set-option -g status-right-length 90
-set-option -g status-left "#(~/.dotfiles/tmux/.tmux.powerline/powerline.sh left)"
-set-option -g status-right "#(~/.dotfiles/tmux/.tmux.powerline/powerline.sh right)"
-bind C-[ run '~/.dotfiles/tmux/.tmux.powerline/mute_powerline.sh left'      # Mute left statusbar.
-bind C-] run '~/.dotfiles/tmux/.tmux.powerline/mute_powerline.sh right'     # Mute right statusbar.
+#set-option -g status-left-length 90
+#set-option -g status-right-length 90
+#set-option -g status-left "#(~/.dotfiles/tmux/.tmux.powerline/powerline.sh left)"
+#set-option -g status-right "#(~/.dotfiles/tmux/.tmux.powerline/powerline.sh right)"
+#bind C-[ run '~/.dotfiles/tmux/.tmux.powerline/mute_powerline.sh left'      # Mute left statusbar.
+#bind C-] run '~/.dotfiles/tmux/.tmux.powerline/mute_powerline.sh right'     # Mute right statusbar.
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
